--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,6 @@ body {
   padding: 0;
   width: 100%;
   min-height: 100%;
-  color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color);
   background-color: var(--tg-theme-bg-color);
 }
